# hybrid-rag-lab

./: Makefile  README.md  app.py  pyproject.toml  requirements.txt
data/: hybrid_retrieval.txt  langchain.txt  langgraph.txt  rag.txt
data/evals/: answer_eval.jsonl  retrieval_eval.jsonl  retrieval_eval_chunked.jsonl  retrieval_eval_hard.jsonl
docs/: execution_guide.md  hf_demo_01.md  hybrid_rag_masterclass.md
scripts/: README.md  run_answer_eval.py  run_bm25.py  run_hybrid.py
scripts/docs/: build_learning_pdf.py
scripts/evaluation/: run_retrieval_evaluation.py
scripts/generation/: run_rag_pipeline.py
scripts/ingestion/: run_local_ingestion_retrieval.py
scripts/retrieval/: run_dense_retrieval.py  run_reranked_retrieval.py
src/ragforge/api/: __init__.py
src/ragforge/core/: __init__.py  schemas.py  telemetry.py
src/ragforge/demo/: __init__.py  spaces.py
src/ragforge/evaluation/: __init__.py  datasets.py  generation.py  retrieval.py  schemas.py
src/ragforge/generation/: __init__.py  context.py  llm.py  pipeline.py  schemas.py
src/ragforge/ingestion/: __init__.py  chunker.py  loader.py  test_ingestion.py
src/ragforge/retrieval/: __init__.py  bm25.py  dense.py  embeddings.py  fusion.py  pipeline.py  (+1 more)
tests/: test_bm25.py  test_bm25_pipeline.py  test_chunker.py  test_context.py  test_demo_spaces.py  test_dense.py  test_dense_pipeline.py  test_evaluation.py  test_fusion.py  test_generation.py  test_generation_evaluation.py  test_hybrid_pipeline.py  test_ingestion_pipeline_integration.py  test_loader.py  test_reranked_pipeline.py  test_reranking.py
(+4 files in other folders)
